Fixing the image issue

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <div class="cardBody">
         <div class="cardLeft">
           <div class="leftBody">
-            <img src="assets/strangerthings.gif" />
+            <img src="assets/strangerThings.gif" />
           </div>
         </div>
         <div class="cardRight">
