--- a/d3StrangerThings/index.html
+++ b/d3StrangerThings/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
   <head>
+
+    <meta property="og:title" content="Stranger Things Titles Re-Created in D3" />
+    <meta property="og:image" content="https://timmarco.github.io/d3StrangerThings/assets/strangerThings.gif" />
+    <meta property="og:description" content="It's not really what d3 is for, but I tried synching some video and animations." />
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
