--- a/fitts/index.html
+++ b/fitts/index.html
@@ -6,7 +6,9 @@
     <script src="bower_components/d3/d3.min.js"></script>
     <script src="js/dist/minified/fitts.js"></script>
     <script src="js/dist/minified/explorables.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Oswald:300,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600" rel="stylesheet">
+
     <link href="styles/style.css" rel="stylesheet" />
 
 
