--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </svg>
       </div>
       <div class="subheading">
-        <a href="mailto:timothymarco@gmail.com">timothymarco@gmail.com</a>  | <a href="https://www.github.com/timmarco" target="_new">github</a> | <a href="https://www.linkedin.com/in/timothymarco" target="_new">linkedin</a>
+        <a href="mailto:tim@timmarco.com">tim@timmarco.com</a>  | <a href="https://www.github.com/timmarco" target="_new">github</a> | <a href="https://www.linkedin.com/in/timothymarco" target="_new">linkedin</a>
       </div>
     </div>
 
