Updated styles / fonts

--- a/index.html
+++ b/index.html
@@ -1,253 +1,16 @@
-<!--
 <!doctype html>
 
-<html>
-  <head>
-    <title>Tim Marco</title>
-    <script src="bower_components/d3/d3.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300,500" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
-  </head>
-
-  <body>
-    <div class="header">
-      <div class="logo">
-        <svg
-          width="300"
-          height="50"
-          fill="white"
-        >
-          <text
-            x="10"
-            y="25"
-            alignment-baseline="central"
-          >
-            Tim Marco
-          </text>
-        </svg>
-      </div>
-      <div class="subheading">
-        <a href="mailto:tim@timmarco.com">tim@timmarco.com</a>  | <a href="https://www.github.com/timmarco" target="_new">github</a> | <a href="https://www.linkedin.com/in/timothymarco" target="_new">linkedin</a>
-      </div>
-    </div>
-
-    <div class="mainContainer">
-
-      <div class="aCard" data-url="fitts/">
-        <div class="cardHeader">
-          <div class="postType">Explorable Explanation</div>
-          <div class="postTitle">Diving Deep Into Fitts' Law</div>
-        </div>
-        <div class="cardBody">
-          <div class="cardLeft">
-            <div class="leftBody">
-              <img src="assets/fitts.gif" />
-            </div>
-          </div>
-          <div class="cardRight">
-            <div class="rightBody">
-              <p>An <strong>Explorable Explanation</strong> that describes Fitts' Law, a key concept in design and ergonomics.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-    <div class="aCard" data-url="d3StrangerThings/">
-      <div class="cardHeader">
-        <div class="postType">Design / Animation Study</div>
-        <div class="postTitle">Stranger Things Titles Re-Created with d3.js</div>
-      </div>
-      <div class="cardBody">
-        <div class="cardLeft">
-          <div class="leftBody">
-            <img src="assets/strangerThings.gif" />
-          </div>
-        </div>
-        <div class="cardRight">
-          <div class="rightBody">
-            <p>A test of the capabilities of d3js and SVG to create cinematic animations and effects. I attempted to re-create the main titles from the Netflix show <em>Stranger Things</em> (the real thing was created by the geniuses at <a href="https://www.imaginaryforces.com" target="_new">Imaginary Forces</a>).</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script>
-      d3.selectAll(".aCard")
-        .on('click',function() {
-          window.location = d3.select(this).attr("data-url");
-        })
-    </script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-104067970-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-  </body>
-</html>
--->
-
-<!doctype html>
 <html>
   <head>
     <title>Tim Marco</title>
     <script src="bower_components/d3/d3.min.js"></script>
     <style>
 
-      body {
-        padding:0;
-        margin:0;
-        font-family:Oswald;
-      }
-
-      a {
-        color:#C82506;
-        text-decoration:none;
-      }
-
-      a:hover {
-        color:black;
-        text-decoration:underline;
-      }
-
-      #navTop {
-        font-size:1em;
-        font-family:Oswald;
-        font-weight:300;
-        position:fixed;
-        left:0;
-        top:0;
-        z-index:2;
-        background-color:white;
-        width:100%;
-        border-bottom:1px solid black;
-      }
-
-      #navTopContainer {
-        max-width:1000px;
-        margin:auto;
-        padding-top:0.5em;
-        padding-bottom:0.5em;
-      }
-
-      #header {
-        width:100%;
-        background-color:black;
-        color:white;
-        border:1px solid #333;
-        min-height:33vh;
-        display:table;
-        margin:auto;
-        margin-top:3em;
-      }
-
-      #centerHeader {
-        display:table-cell;
-        vertical-align: middle;
-        text-align:center;
-      }
-
-      #welcomeText {
-        max-width:1000px;
-        font-size:2.5em;
-        margin:auto;
-        font-weight:300;
-      }
-
-
-
-      #body {
-        width:100%;
-        min-height:50vh;
-        max-width:1000px;
-        margin:auto;
-        margin-top:2em;
-        margin-bottom:2em;
-      }
-
-      #exampleContainer {
-        display:flex;
-        flex-direction:row;
-        justify-content:center;
-        flex-wrap:wrap;
-        align-items:stretch;
-      }
-
-      .exampleLink, .exampleLink:hover {
-        color:inherit;
-        text-decoration:inherit;
-      }
-
-      .example {
-        width:250px;
-        margin-bottom:1em;
-        margin-top:1em;
-        background-color:white;
-        padding:0.25em;
-        padding-left:1em;
-        padding-right:1em;
-        margin-left:0.25em;
-        margin-right:0.25em;
-        box-shadow:2px 2px 5px rgba(0,0,0,0);
-        cursor:pointer;
-        border-top:3px solid #C82506;
-      }
-
-      .example:hover {
-        box-shadow:2px 2px 5px #aaa;
-      }
-
-      .exampleTitleContainer {
-        display:table;
-        font-size:1.33em;
-        height:3em;
-        width:100%;
-      }
-
-      .exampleTitle {
-        display:table-cell;
-        vertical-align:top;
-        font-weight:300;
-        letter-spacing:-0.75px;
-      }
-
-
-      .example img {
-        width:100%;
-        animation-play-state:pause;
-      }
-
-      .example p {
-        font-family:Merriweather;
-      }
-
-
-      #footer {
-        width:100%;
-        border:1px solid #333;
-        display:flex;
-        flex-direction:row;
-        align-content:flex-start;
-        max-width:1000px;
-        margin:auto;
-      }
-
-      #footerAbout {
-        padding:2em;
-      }
-
-      #footerLinks {
-        padding:2em;
-      }
-
     </style>
+    <link rel="stylesheet" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,500" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet" />
+
   </head>
 
   <body>
@@ -306,12 +69,7 @@
 
 
     <div id="footer">
-      <!--
-      <div id="footerAbout">
-        <strong>Footer Heading</strong>
-        <p>This is the section that is about me. It is much longer than the other parts and I can add real text here if I want. Talking about who I am is important as it will help my audience know more about me. I should talk about what I am passionate about, what I do, and what I want the future to be. It shouldn't be too long, though. I'm not writing an essay.</p>
-      </div>
-      -->
+
     </div>
 
     <script>
