Added Blender Charts

--- a/index.html
+++ b/index.html
@@ -53,13 +53,27 @@
         <div class="example">
           <a href="d3StrangerThings/" class="exampleLink">
             <div class="exampleTitleContainer">
-              <div class="exampleTitle">Re-Creating the <em>Stranger Things</em> Main Title in d3</div>
+              <div class="exampleTitle">Re-Creating the <em>Stranger Things</em> Main Title in d3.js</div>
             </div>
             <img src="assets/strangerThings.gif" style="display:none" class="hiddenMotion" />
             <img src="assets/StrangerThingsStatic.png" style="display:block" class="staticOverlay"/>
             <p>A motion study and experiment to see just how far I can push vector animation in Javascript.</p>
           </a>
         </div>
+
+        <div class="example">
+          <a href="blenderCharts/" class="exampleLink">
+            <div class="exampleTitleContainer">
+              <div class="exampleTitle">Creating Video Charts in Blender</div>
+            </div>
+            <div class="imageSwapContainer">
+              <img src="assets/blenderCharts.gif" style="display:none" class="hiddenMotion" />
+              <img src="assets/blenderCharts.png" style="display:block" class="staticOverlay"/>
+            </div>
+            <p>Experimenting with Blender's Python API to create data-driven graphics.</p>
+          </a>
+        </div>
+
 
 
       </div>
