Blender Charts Loop

--- a/blenderCharts/index.html
+++ b/blenderCharts/index.html
@@ -22,23 +22,23 @@
 
     <p>That let me create my first animated chart:</p>
 
-    <iframe src="https://player.vimeo.com/video/298849685" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/298849685?loop=1" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
     <p>And thanks to Blender's Python API, it was really easy to parameterize any of the style information I wanted to use, like this:</p>
 
-    <iframe src="https://player.vimeo.com/video/298849555" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/298849555?loop=1" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
     <p>By changing just a few lines of code, I could now make the charts look however I wanted:</p>
 
-    <iframe src="https://player.vimeo.com/video/298849492" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/298849492?loop=1" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
     <p>But changing the appearance was just one part of what I wanted to accomplish. I also needed to be able to swap out the data on the fly:</p>
 
-    <iframe src="https://player.vimeo.com/video/298849608" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/298849608?loop=1" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
     <p>Once I could do that once, it was arbitrarily easy to swap out any data set:</p>
 
-    <iframe src="https://player.vimeo.com/video/298849455" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/298849455?loop=1" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
     <p>After putting this together, my next steps are to allow further customization. First, by playing around with the duration of the animations, and eventually by controlling the camera sweeps.</p>
 
