--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
           </a>
         </div>
 
+        <div class="example">
+          <a href="babip/" class="exampleLink">
+            <div class="exampleTitleContainer">
+              <div class="exampleTitle">A Lot of Baseball is Luck</div>
+            </div>
+            <div class="imageSwapContainer">
+              <img src="assets/babip.gif" style="display:none" class="hiddenMotion" />
+              <img src="assets/babip.png" style="display:block" class="staticOverlay"/>
+            </div>
+            <p>An overview of one of the earliest and most influential findings in baseball analytics.</p>
+          </a>
+        </div>
 
 
       </div>
