Updated BABIP Title

--- a/babip/index.html
+++ b/babip/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>DIPs</title>
+	<title>A Lot of Baseball is Luck | Tim Marco</title>
 		<style>
 			body {
 				font-family:Merriweather;
